--- a/index.html
+++ b/index.html
@@ -58,6 +58,174 @@
       </nav>
     </header>
 
+    <section id="home">
+        <div id="home-grid">
+          <div class="purple-grid-rows">
+            <div class="purple-dark"></div>
+            <div class="purple-medium"></div>
+            <div class="purple-light"></div>
+          </div>
+        </div>
+        <div id="home-content-box">
+          <div id="home-content-box-inner">
+            <div id="home-heading" class="animated fadeIn">
+              <h3>Get a website in <br /> 15  minutes or less</h3>
+            </div>
+            <div id="search-form" class="animated fadeIn">
+              <form class="form-inline" action="#">
+                <div class="form-group">
+                  <input type="text" name="domain-input" placeholder="Write your domain" class="search-form-input" />
+                </div>
+                <div class="form-group" id="send-btn">
+                  <a class="btn btn-lg btn-mint search-form-submit-btn" href="#" role="button">Search</a>
+                </div>
+              </form>
+            </div>
+            <div id="home-sub-heading" class="animated fadeIn">
+              <p>Learn how we can enhance your business</p>
+              <i class="btn home-arrow-btn fa fa-arrow-circle-down"href="#"></i>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <section id="about">
+      <div id="about-content-box">
+        <div id="about-content-box-outer">
+          <div id="about-content-box-inner">
+            <div id="about-desc">
+              <p>
+                Quorum ita cupidatat ab ita o minim commodo nam an sunt summis tamen possumus o
+                ut do irure admodum. Veniam cohaerescant pariatur dolore nescius ex si enim
+                ipsum veniam incididunt, ubi te magna officia, qui dolore quamquam imitarentur.
+                Se magna cupidatat transferrem.
+              </p>
+            </div>
+            <div id="about-btn">
+              <a class="btn btn-lg btn-general btn-purple" href="#work" role="button"> Create Your Account </a>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <!-- <section id="services">
+      <div class="content-box">
+        <div class="content-title">
+          <h3> Services </h3>
+          <div class="content-title-underline"></div>
+        </div>
+        <div class="container">
+          <div class"row">
+            <div class="col-md-4">
+              <div class="service-item">
+                <div class="service-item-icon">
+                  <i class="fa fa-paint-brush fa-3x"></i>
+                </div>
+                <div class="service-item-title">
+                  <h3> Web Design </h3>
+                </div>
+                <div class="service-item-description">
+                  <p>
+                    Non an comprehenderit. Probant velit minim singulis quorum.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-item">
+                <div class="service-item-icon">
+                  <i class="fa fa-laptop fa-3x"></i>
+                </div>
+                <div class="service-item-title">
+                  <h3> Web Development </h3>
+                </div>
+                <div class="service-item-description">
+                  <p>
+                    Non an comprehenderit. Probant velit minim singulis quorum.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-item">
+                <div class="service-item-icon">
+                  <i class="fa fa-mobile fa-3x"></i>
+                </div>
+                <div class="service-item-title">
+                  <h3> Mobile Apps </h3>
+                </div>
+                <div class="service-item-description">
+                  <p>
+                    Non an comprehenderit. Probant velit minim singulis quorum.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-item">
+                <div class="service-item-icon">
+                  <i class="fa fa-search fa-3x"></i>
+                </div>
+                <div class="service-item-title">
+                  <h3> SEO Optimization </h3>
+                </div>
+                <div class="service-item-description">
+                  <p>
+                    Non an comprehenderit. Probant velit minim singulis quorum.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-item">
+                <div class="service-item-icon">
+                  <i class="fa fa-pencil-square-o fa-3x"></i>
+                </div>
+                <div class="service-item-title">
+                  <h3> UX Design </h3>
+                </div>
+                <div class="service-item-description">
+                  <p>
+                    Non an comprehenderit. Probant velit minim singulis quorum.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="service-item">
+                <div class="service-item-icon">
+                  <i class="fa fa-life-ring fa-3x"></i>
+                </div>
+                <div class="service-item-title">
+                  <h3> Support </h3>
+                </div>
+                <div class="service-item-description">
+                  <p>
+                    Non an comprehenderit. Probant velit minim singulis quorum.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
+    <section id="services">
+      <div class="content-box">
+        <div class="content-title">
+          <h3> Services </h3>
+          <div class="content-title-underline"></div>
+        </div>
+      </div>
+
+    </section>
+
+
+
+
+
 
 
 
