clean services header

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </head>
 
   <body data-spy="scroll" data-target=".mywebnow-top-nav" data-offset="65">
+
     <!-- Navigation Bar -->
     <header>
       <nav class="navbar mywebnow-top-nav navbar-fixed-top" role="navigation">
@@ -58,6 +59,7 @@
       </nav>
     </header>
 
+    <!-- Home Header -->
     <section id="home">
         <div id="home-grid">
           <div class="purple-grid-rows">
@@ -89,6 +91,7 @@
         </div>
     </section>
 
+  <!-- About/Why Us -->
     <section id="about">
       <div id="about-content-box">
         <div id="about-content-box-outer">
@@ -109,109 +112,6 @@
     </section>
 
     <!-- Services -->
-    <!-- <section id="services">
-      <div class="content-box">
-        <div class="content-title">
-          <h3> Services </h3>
-          <div class="content-title-underline"></div>
-        </div>
-        <div class="container">
-          <div class"row">
-            <div class="col-md-4">
-              <div class="service-item">
-                <div class="service-item-icon">
-                  <i class="fa fa-paint-brush fa-3x"></i>
-                </div>
-                <div class="service-item-title">
-                  <h3> Web Design </h3>
-                </div>
-                <div class="service-item-description">
-                  <p>
-                    Non an comprehenderit. Probant velit minim singulis quorum.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="service-item">
-                <div class="service-item-icon">
-                  <i class="fa fa-laptop fa-3x"></i>
-                </div>
-                <div class="service-item-title">
-                  <h3> Web Development </h3>
-                </div>
-                <div class="service-item-description">
-                  <p>
-                    Non an comprehenderit. Probant velit minim singulis quorum.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="service-item">
-                <div class="service-item-icon">
-                  <i class="fa fa-mobile fa-3x"></i>
-                </div>
-                <div class="service-item-title">
-                  <h3> Mobile Apps </h3>
-                </div>
-                <div class="service-item-description">
-                  <p>
-                    Non an comprehenderit. Probant velit minim singulis quorum.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="service-item">
-                <div class="service-item-icon">
-                  <i class="fa fa-search fa-3x"></i>
-                </div>
-                <div class="service-item-title">
-                  <h3> SEO Optimization </h3>
-                </div>
-                <div class="service-item-description">
-                  <p>
-                    Non an comprehenderit. Probant velit minim singulis quorum.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="service-item">
-                <div class="service-item-icon">
-                  <i class="fa fa-pencil-square-o fa-3x"></i>
-                </div>
-                <div class="service-item-title">
-                  <h3> UX Design </h3>
-                </div>
-                <div class="service-item-description">
-                  <p>
-                    Non an comprehenderit. Probant velit minim singulis quorum.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="service-item">
-                <div class="service-item-icon">
-                  <i class="fa fa-life-ring fa-3x"></i>
-                </div>
-                <div class="service-item-title">
-                  <h3> Support </h3>
-                </div>
-                <div class="service-item-description">
-                  <p>
-                    Non an comprehenderit. Probant velit minim singulis quorum.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
     <section id="services">
       <div class="content-box">
         <div class="content-title">
