--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
     <section id="home">
         <div id="home-grid">
           <div class="purple-grid-rows">
-            <div class="purple-dark"></div>
-            <div class="purple-medium"></div>
-            <div class="purple-light"></div>
+            <div class="purple-dark-section"></div>
+            <div class="purple-medium-section"></div>
+            <div class="purple-light-section"></div>
+            <!-- <div class="white-section"></div>
+            <div class="off-white-section"></div> -->
           </div>
         </div>
         <div id="home-content-box">
@@ -91,35 +93,102 @@
         </div>
     </section>
 
-  <!-- About/Why Us -->
+    <!-- About/Why Us -->
     <section id="about">
-      <div id="about-content-box">
-        <div id="about-content-box-outer">
-          <div id="about-content-box-inner">
-            <div id="about-desc">
-              <p>
-                Quorum ita cupidatat ab ita o minim commodo nam an sunt summis tamen possumus o
-                ut do irure admodum. Veniam cohaerescant pariatur dolore nescius ex si enim
-                ipsum veniam incididunt, ubi te magna officia, qui dolore quamquam imitarentur.
-                Se magna cupidatat transferrem.
-              </p>
+        <div id="about-content-box">
+          <div id="about-content-box-outer">
+            <div id="about-content-box-inner">
+              <div id="about-desc">
+                <p>
+                  Quorum ita cupidatat ab ita o minim commodo nam an sunt summis tamen possumus o
+                  ut do irure admodum. Veniam cohaerescant pariatur dolore nescius ex si enim
+                  ipsum veniam incididunt, ubi te magna officia, qui dolore quamquam imitarentur.
+                  Se magna cupidatat transferrem.
+                </p>
+              </div>
+              <div id="about-btn">
+                <a class="btn btn-lg btn-general btn-purple" href="#work" role="button"> Create Your Account </a>
+              </div>
             </div>
-            <div id="about-btn">
-              <a class="btn btn-lg btn-general btn-purple" href="#work" role="button"> Create Your Account </a>
-            </div>
-          </div>
-      </div>
+        </div>
     </section>
 
     <!-- Services -->
     <section id="services">
-      <div class="content-box">
-        <div class="content-title">
-          <h3> Services </h3>
-          <div class="content-title-underline"></div>
+      <div class="services-content-box content-box">
+        <div class="services-content-box-outer">
+          <div class="services-content-box-inner">
+            <div class="services-content-title">
+              <h3> Services </h3>
+              <div class="services-content-title-underline"></div>
+            </div>
+            <div id="services-grid-outer-wrapper">
+              <div id="services-grid">
+                  <div class="service-item">
+                    <div class="service-item-inner">
+                      <div class="service-item-icon">
+                        <i class="fa fa-paint-brush fa-3x"></i>
+                      </div>
+                      <div class="service-item-title">
+                        <h3> Web Design </h3>
+                      </div>
+                      <div class="service-item-description">
+                        <p>
+                          Non an comprehenderit. Probant velit minim singulis quorum.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service-item">
+                    <div class="service-item-inner">
+                      <div class="service-item-icon">
+                        <i class="fa fa-paint-brush fa-3x"></i>
+                      </div>
+                      <div class="service-item-title">
+                        <h3> Web Design </h3>
+                      </div>
+                      <div class="service-item-description">
+                        <p>
+                          Non an comprehenderit. Probant velit minim singulis quorum.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service-item">
+                    <div class="service-item-inner">
+                      <div class="service-item-icon">
+                        <i class="fa fa-paint-brush fa-3x"></i>
+                      </div>
+                      <div class="service-item-title">
+                        <h3> Web Design </h3>
+                      </div>
+                      <div class="service-item-description">
+                        <p>
+                          Non an comprehenderit. Probant velit minim singulis quorum.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service-item">
+                    <div class="service-item-inner">
+                      <div class="service-item-icon">
+                        <i class="fa fa-paint-brush fa-3x"></i>
+                      </div>
+                      <div class="service-item-title">
+                        <h3> Web Design </h3>
+                      </div>
+                      <div class="service-item-description">
+                        <p>
+                          Non an comprehenderit. Probant velit minim singulis quorum.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-
     </section>
 
 
