--- a/index.html
+++ b/index.html
@@ -28,168 +28,173 @@
     <link rel="stylesheet" href="css/stylesheets/style.css">
   </head>
 
-  <body data-spy="scroll" data-target=".mywebnow-top-nav" data-offset="65">
-
-    <!-- Navigation Bar -->
-    <header>
-      <nav class="navbar mywebnow-top-nav navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-          <div class="mywebnow-nav-wrapper">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mywebnow-menu">
-                <span class="sr-only">Toggle Navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#home">
-                <img src="img/ice-cream-logo.png" alt="logo" height="50" />
-              </a>
-            </div>
-            <div id="mywebnow-menu" class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="#home"> Home </a></li>
-                <li><a href="#whyus"> Why Us </a></li>
-                <li><a href="#contact"> Contact </a></li>
-                <li><a href="#login"> Login </a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
-
-    <!-- Home Header -->
-    <section id="home">
-        <div id="home-grid">
-          <div class="purple-grid-rows">
+  <body>
+        <div id="background-grid">
+          <div class="background-grid-rows">
             <div class="purple-dark-section"></div>
             <div class="purple-medium-section"></div>
             <div class="purple-light-section"></div>
-            <!-- <div class="white-section"></div>
-            <div class="off-white-section"></div> -->
+            <div class="white-section"></div>
+            <div class="off-white-section"></div>
           </div>
         </div>
-        <div id="home-content-box">
-          <div id="home-content-box-inner">
-            <div id="home-heading" class="animated fadeIn">
-              <h3>Get a website in <br /> 15  minutes or less</h3>
-            </div>
-            <div id="search-form" class="animated fadeIn">
-              <form class="form-inline" action="#">
-                <div class="form-group">
-                  <input type="text" name="domain-input" placeholder="Write your domain" class="search-form-input" />
-                </div>
-                <div class="form-group" id="send-btn">
-                  <a class="btn btn-lg btn-mint search-form-submit-btn" href="#" role="button">Search</a>
-                </div>
-              </form>
-            </div>
-            <div id="home-sub-heading" class="animated fadeIn">
-              <p>Learn how we can enhance your business</p>
-              <i class="btn home-arrow-btn fa fa-arrow-circle-down"href="#"></i>
-            </div>
-          </div>
-        </div>
-    </section>
 
-    <!-- About/Why Us -->
-    <section id="about">
-        <div id="about-content-box">
-          <div id="about-content-box-outer">
-            <div id="about-content-box-inner">
-              <div id="about-desc">
-                <p>
-                  Quorum ita cupidatat ab ita o minim commodo nam an sunt summis tamen possumus o
-                  ut do irure admodum. Veniam cohaerescant pariatur dolore nescius ex si enim
-                  ipsum veniam incididunt, ubi te magna officia, qui dolore quamquam imitarentur.
-                  Se magna cupidatat transferrem.
-                </p>
+        <!-- Navigation Bar -->
+        <header>
+            <nav class="navbar mywebnow-top-nav navbar-fixed-top" role="navigation">
+              <div class="container-fluid">
+                <div class="mywebnow-nav-wrapper">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mywebnow-menu">
+                      <span class="sr-only">Toggle Navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#home">
+                      <img src="img/ice-cream-logo.png" alt="logo" height="50" />
+                    </a>
+                  </div>
+                  <div id="mywebnow-menu" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                      <li><a href="#home"> Home </a></li>
+                      <li><a href="#whyus"> Why Us </a></li>
+                      <li><a href="#contact"> Contact </a></li>
+                      <li><a href="#login"> Login </a></li>
+                    </ul>
+                  </div>
+                </div>
               </div>
-              <div id="about-btn">
-                <a class="btn btn-lg btn-general btn-purple" href="#work" role="button"> Create Your Account </a>
-              </div>
-            </div>
-        </div>
-    </section>
+            </nav>
+        </header>
 
-    <!-- Services -->
-    <section id="services">
-      <div class="services-content-box content-box">
-        <div class="services-content-box-outer">
-          <div class="services-content-box-inner">
-            <div class="services-content-title">
-              <h3> Services </h3>
-              <div class="services-content-title-underline"></div>
-            </div>
-            <div id="services-grid-outer-wrapper">
-              <div id="services-grid">
-                  <div class="service-item">
-                    <div class="service-item-inner">
-                      <div class="service-item-icon">
-                        <i class="fa fa-paint-brush fa-3x"></i>
-                      </div>
-                      <div class="service-item-title">
-                        <h3> Web Design </h3>
-                      </div>
-                      <div class="service-item-description">
-                        <p>
-                          Non an comprehenderit. Probant velit minim singulis quorum.
-                        </p>
-                      </div>
-                    </div>
+       <div id="page-content-wrapper">
+          <!-- Home Header -->
+          <section id="home">
+              <div id="home-content-box">
+                <div id="home-content-box-inner">
+                  <div id="home-heading" class="animated fadeIn">
+                    <h3>Get a website in <br /> 15  minutes or less</h3>
                   </div>
-                  <div class="service-item">
-                    <div class="service-item-inner">
-                      <div class="service-item-icon">
-                        <i class="fa fa-paint-brush fa-3x"></i>
+                  <div id="search-form" class="animated fadeIn">
+                    <form class="form-inline" action="#">
+                      <div class="form-group">
+                        <input type="text" name="domain-input" placeholder="Write your domain" class="search-form-input" />
                       </div>
-                      <div class="service-item-title">
-                        <h3> Web Design </h3>
+                      <div class="form-group" id="send-btn">
+                        <a class="btn btn-lg btn-mint search-form-submit-btn" href="#" role="button">Search</a>
                       </div>
-                      <div class="service-item-description">
-                        <p>
-                          Non an comprehenderit. Probant velit minim singulis quorum.
-                        </p>
-                      </div>
-                    </div>
+                    </form>
                   </div>
-                  <div class="service-item">
-                    <div class="service-item-inner">
-                      <div class="service-item-icon">
-                        <i class="fa fa-paint-brush fa-3x"></i>
-                      </div>
-                      <div class="service-item-title">
-                        <h3> Web Design </h3>
-                      </div>
-                      <div class="service-item-description">
-                        <p>
-                          Non an comprehenderit. Probant velit minim singulis quorum.
-                        </p>
-                      </div>
-                    </div>
+                  <div id="home-sub-heading" class="animated fadeIn">
+                    <p>Learn how we can enhance your business</p>
+                    <i class="btn home-arrow-btn fa fa-arrow-circle-down"href="#"></i>
                   </div>
-                  <div class="service-item">
-                    <div class="service-item-inner">
-                      <div class="service-item-icon">
-                        <i class="fa fa-paint-brush fa-3x"></i>
-                      </div>
-                      <div class="service-item-title">
-                        <h3> Web Design </h3>
-                      </div>
-                      <div class="service-item-description">
-                        <p>
-                          Non an comprehenderit. Probant velit minim singulis quorum.
-                        </p>
-                      </div>
+                </div>
+              </div>
+          </section>
+
+          <!-- About/Why Us -->
+          <section id="about">
+              <div id="about-content-box">
+                <div id="about-content-box-outer">
+                  <div id="about-content-box-inner">
+                    <div id="about-desc">
+                      <p>
+                        Quorum ita cupidatat ab ita o minim commodo nam an sunt summis tamen possumus o
+                        ut do irure admodum. Veniam cohaerescant pariatur dolore nescius ex si enim
+                        ipsum veniam incididunt, ubi te magna officia, qui dolore quamquam imitarentur.
+                        Se magna cupidatat transferrem.
+                      </p>
+                    </div>
+                    <div id="about-btn">
+                      <a class="btn btn-lg btn-general btn-purple" href="#work" role="button"> Create Your Account </a>
                     </div>
                   </div>
               </div>
+          </section>
+
+          <!-- Services -->
+          <section id="services">
+            <div class="services-content-box content-box">
+              <div class="services-content-box-outer">
+                <div class="services-content-box-inner">
+                  <div class="services-content-title">
+                    <h3> Services </h3>
+                    <div class="services-content-title-underline"></div>
+                  </div>
+                  <div id="services-grid-outer-wrapper">
+                    <div id="services-grid">
+                        <div class="service-item">
+                          <div class="service-item-inner">
+                            <div class="service-item-icon">
+                              <i class="fa fa-paint-brush fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                              <h3> Web Design </h3>
+                            </div>
+                            <div class="service-item-description">
+                              <p>
+                                Non an comprehenderit. Probant velit minim singulis quorum.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="service-item">
+                          <div class="service-item-inner">
+                            <div class="service-item-icon">
+                              <i class="fa fa-paint-brush fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                              <h3> Web Design </h3>
+                            </div>
+                            <div class="service-item-description">
+                              <p>
+                                Non an comprehenderit. Probant velit minim singulis quorum.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="service-item">
+                          <div class="service-item-inner">
+                            <div class="service-item-icon">
+                              <i class="fa fa-paint-brush fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                              <h3> Web Design </h3>
+                            </div>
+                            <div class="service-item-description">
+                              <p>
+                                Non an comprehenderit. Probant velit minim singulis quorum.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="service-item">
+                          <div class="service-item-inner">
+                            <div class="service-item-icon">
+                              <i class="fa fa-paint-brush fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                              <h3> Web Design </h3>
+                            </div>
+                            <div class="service-item-description">
+                              <p>
+                                Non an comprehenderit. Probant velit minim singulis quorum.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
+          </section>
+
         </div>
-      </div>
-    </section>
+
+
 
 
 
