--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                   </div>
                   <div id="home-sub-heading" class="animated fadeIn">
                     <p>Learn how we can enhance your business</p>
-                    <i class="btn home-arrow-btn fa fa-arrow-circle-down"href="#"></i>
+                    <div class="home-arrow-icon">
+                      <i class="fa fa-arrow-down fa-3x"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -116,7 +118,7 @@
 
           <!-- Services -->
           <section id="services">
-            <div class="services-content-box content-box">
+            <div class="services-content-box">
               <div class="services-content-box-outer">
                 <div class="services-content-box-inner">
                   <div class="services-content-title">
@@ -128,10 +130,10 @@
                         <div class="service-item">
                           <div class="service-item-inner">
                             <div class="service-item-icon">
-                              <i class="fa fa-paint-brush fa-3x"></i>
+                              <i class="fa fa-laptop fa-3x"></i>
                             </div>
                             <div class="service-item-title">
-                              <h3> Web Design </h3>
+                              <h3> Web Hosting </h3>
                             </div>
                             <div class="service-item-description">
                               <p>
@@ -143,10 +145,10 @@
                         <div class="service-item">
                           <div class="service-item-inner">
                             <div class="service-item-icon">
-                              <i class="fa fa-paint-brush fa-3x"></i>
+                              <i class="fa fa-building fa-3x"></i>
                             </div>
                             <div class="service-item-title">
-                              <h3> Web Design </h3>
+                              <h3> Resellers </h3>
                             </div>
                             <div class="service-item-description">
                               <p>
@@ -158,10 +160,10 @@
                         <div class="service-item">
                           <div class="service-item-inner">
                             <div class="service-item-icon">
-                              <i class="fa fa-paint-brush fa-3x"></i>
+                              <i class="fa fa-superpowers fa-3x"></i>
                             </div>
                             <div class="service-item-title">
-                              <h3> Web Design </h3>
+                              <h3> VIP Hosting </h3>
                             </div>
                             <div class="service-item-description">
                               <p>
@@ -173,10 +175,10 @@
                         <div class="service-item">
                           <div class="service-item-inner">
                             <div class="service-item-icon">
-                              <i class="fa fa-paint-brush fa-3x"></i>
+                              <i class="fa fa-cloud fa-3x"></i>
                             </div>
                             <div class="service-item-title">
-                              <h3> Web Design </h3>
+                              <h3> Cloud Hosting </h3>
                             </div>
                             <div class="service-item-description">
                               <p>
@@ -192,34 +194,32 @@
             </div>
           </section>
 
+          <!-- Contact -->
+          <section id="contact">
+            <div class="contact-content-box">
+              <div class="contact-content-box-outer">
+                <div class="contact-titles">
+                  <div class="contact-text-header">
+                    <p>Are you ready?</p>
+                  </div>
+                  <div class="contact-text-sub-header">
+                    <p>Are you ready?</p>
+                  </div>
+                </div>
+                <div class="contact-buttons">
+                  <a class="btn btn-lg btn-general btn-purple" href="#create" role="button"> Create Your Account </a>
+                  <a class="btn btn-lg btn-general btn-white" href="#contact" role="button"> Contact Us</a>
+                </div>
+              </div>
+            </div>
+          </section>
+
+
+
+          <footer>
+          </footer>
+
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- jQuery -->
