--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- title -->
-    <title>Landing Page</title>
+    <title>My Web Services</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
@@ -58,9 +58,9 @@
                   <div id="mywebnow-menu" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                       <li><a href="#home"> Home </a></li>
-                      <li><a href="#whyus"> Why Us </a></li>
+                      <li><a href="#about"> Why Us </a></li>
                       <li><a href="#contact"> Contact </a></li>
-                      <li><a href="#login"> Login </a></li>
+                      <li><a href="#contact"> Login </a></li>
                     </ul>
                   </div>
                 </div>
@@ -74,7 +74,7 @@
               <div id="home-content-box">
                 <div id="home-content-box-inner">
                   <div id="home-heading" class="animated fadeIn">
-                    <h3>Get a website in <br /> 15  minutes or less</h3>
+                    <h3>Get a website in <br  /> 15 minutes <span style="color: #81D398"> or less </span></h3>
                   </div>
                   <div id="search-form" class="animated fadeIn">
                     <form class="form-inline" action="#">
@@ -110,7 +110,7 @@
                       </p>
                     </div>
                     <div id="about-btn">
-                      <a class="btn btn-lg btn-general btn-purple" href="#work" role="button"> Create Your Account </a>
+                      <a class="btn btn-md btn-general btn-purple" href="#work" role="button"> Create Your Account </a>
                     </div>
                   </div>
               </div>
@@ -203,22 +203,74 @@
                     <p>Are you ready?</p>
                   </div>
                   <div class="contact-text-sub-header">
-                    <p>Are you ready?</p>
+                    <p>create an account, or contact us.</p>
                   </div>
                 </div>
                 <div class="contact-buttons">
-                  <a class="btn btn-lg btn-general btn-purple" href="#create" role="button"> Create Your Account </a>
-                  <a class="btn btn-lg btn-general btn-white" href="#contact" role="button"> Contact Us</a>
+                  <a class="btn btn-md btn-general btn-purple" href="#create" role="button"> Create Your Account </a>
+                  <a class="btn btn-md btn-general btn-white" href="#contact" role="button"> Contact Us</a>
                 </div>
               </div>
             </div>
           </section>
 
-
-
           <footer>
+            <div class="container">
+              <div class="row">
+                  <div class="footer-contact col-md-2">
+                    <ul class="footer-contact-items">
+                      <li>
+                        <a href="#" class="social-icon icon-white"><i class="fa fa-phone"></i></a>
+                        <strong>Phone#</strong>
+                      </li>
+                      <li>
+                        <a href="#" class="social-icon icon-white"><i class="fa fa-envelope"></i></a>
+                        Email
+                      </li>
+                      <li>
+                        <a href="#" class="social-icon icon-white"><i class="fa fa-map-marker"></i></a>
+                        Address
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="footer-company col-md-2 hidden-sm hidden-xs">
+                    <ul class="footer-company-items">
+                      <li><strong>Company</strong></li>
+                      <li>About Us</li>
+                      <li>News</li>
+                      <li>FAQ</li>
+                      <li>Contact Us</li>
+                    </ul>
+                  </div>
+                  <div class="footer-services col-md-2 hidden-sm hidden-xs">
+                    <ul class="footer-services-items">
+                      <li><strong>Services</strong></li>
+                      <li>Web Hosting</li>
+                      <li>Cloud Hosting</li>
+                      <li>VPS Services</li>
+                      <li>Domain Names</li>
+                    </ul>
+                  </div>
+                  <div class="footer-others col-md-2 hidden-sm hidden-xs">
+                    <ul class="footer-others-items">
+                      <li><strong>Others</strong></li>
+                      <li>Transfer domains</li>
+                      <li>Customer Portal</li>
+                      <li>Support Portal</li>
+                      <li>Video Tutorials</li>
+                    </ul>
+                  </div>
+                  <div class="footer-social-icons col-md-2">
+                    <ul class="social-list">
+                        <li><a href="#" class="social-icon icon-white"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#" class="social-icon icon-white"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#" class="social-icon icon-white"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#" class="social-icon icon-white"><i class="fa fa-youtube-play"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
           </footer>
-
         </div>
 
 
