--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!-- style CSS -->
     <link rel="stylesheet" href="css/stylesheets/style.css">
+    <link rel="stylesheet" href="css/stylesheets/responsive.css">
   </head>
 
   <body>
@@ -99,8 +100,7 @@
           <!-- About/Why Us -->
           <section id="about">
               <div id="about-content-box">
-                <div id="about-content-box-outer">
-                  <div id="about-content-box-inner">
+                  <div id="about-content-box-wrapper">
                     <div id="about-desc">
                       <p>
                         Quorum ita cupidatat ab ita o minim commodo nam an sunt summis tamen possumus o
@@ -119,18 +119,17 @@
           <!-- Services -->
           <section id="services">
             <div class="services-content-box">
-              <div class="services-content-box-outer">
-                <div class="services-content-box-inner">
+              <div class="services-content-box-wrapper">
                   <div class="services-content-title">
                     <h3> Services </h3>
                     <div class="services-content-title-underline"></div>
                   </div>
-                  <div id="services-grid-outer-wrapper">
-                    <div id="services-grid">
+                  <div class="services-grid-wrapper">
+                    <div class="services-grid">
                         <div class="service-item">
                           <div class="service-item-inner">
                             <div class="service-item-icon">
-                              <i class="fa fa-laptop fa-3x"></i>
+                              <i class="fa fa-laptop fa-2x"></i>
                             </div>
                             <div class="service-item-title">
                               <h3> Web Hosting </h3>
@@ -189,7 +188,6 @@
                         </div>
                     </div>
                   </div>
-                </div>
               </div>
             </div>
           </section>
@@ -197,7 +195,7 @@
           <!-- Contact -->
           <section id="contact">
             <div class="contact-content-box">
-              <div class="contact-content-box-outer">
+              <div class="contact-content-box-wrapper">
                 <div class="contact-titles">
                   <div class="contact-text-header">
                     <p>Are you ready?</p>
@@ -214,6 +212,7 @@
             </div>
           </section>
 
+          <!-- Footer -->
           <footer>
             <div class="container">
               <div class="row">
@@ -271,6 +270,7 @@
                 </div>
               </div>
           </footer>
+
         </div>
 
 
