--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#home">
+            <a class="navbar-logo" href="#home">
               <img src="img/ice-cream-logo.png" alt="logo" height="50" />
             </a>
           </div>
-          <div id="mywebnow-menu" class="collapse navbar-collapse">
+          <div class="mywebnow-menu" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li><a href="#home"> Home </a></li>
               <li><a href="#about"> Why Us </a></li>
@@ -71,9 +71,9 @@
   <div id="page-content-wrapper">
     <!-- Home Header -->
     <section id="home">
-      <div id="home-content-box">
-        <div id="home-content-box-inner">
-          <div id="home-heading" class="animated fadeIn">
+      <div class="home-content-box">
+        <div class="home-content-box-inner">
+          <div class="home-heading animated fadeIn">
             <h3>Get a website in <br /> 15 minutes <span style="color: #81D398"> or less </span></h3>
           </div>
           <div id="search-form" class="animated fadeIn">
@@ -86,7 +86,7 @@
               </div>
             </form>
           </div>
-          <div id="home-sub-heading" class="animated fadeIn">
+          <div class="home-sub-heading animated fadeIn">
             <p>Learn how we can enhance your business</p>
             <div class="home-arrow-icon">
               <i class="fa fa-arrow-down fa-3x"></i>
