--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="home-sub-heading animated fadeIn">
             <p>Learn how we can enhance your business</p>
             <div class="home-arrow-icon">
-              <i class="fa fa-arrow-down fa-3x"></i>
+              <a href="#about"><i class="fa fa-arrow-down fa-3x"></i></a>
             </div>
           </div>
         </div>
