--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   </header>
 
   <div id="page-content-wrapper">
+
     <!-- Home Header -->
     <section id="home">
       <div class="home-content-box">
@@ -98,9 +99,9 @@
 
     <!-- About/Why Us -->
     <section id="about">
-      <div id="about-content-box">
-        <div id="about-content-box-wrapper">
-          <div id="about-desc">
+      <div class="about-content-box">
+        <div class="about-content-box-wrapper">
+          <div class="about-description">
             <p>
               Quorum ita cupidatat ab ita o minim commodo nam an sunt summis tamen possumus o
               ut do irure admodum. Veniam cohaerescant pariatur dolore nescius ex si enim
@@ -108,7 +109,7 @@
               Se magna cupidatat transferrem.
             </p>
           </div>
-          <div id="about-btn">
+          <div class="about-btn">
             <a class="btn btn-md btn-general btn-purple" href="#work" role="button"> Create Your Account </a>
           </div>
         </div>
