--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <!-- Contact -->
     <section id="contact">
       <div class="contact-content-box">
-        <div class="contact-content-box-wrapper">
-          <div class="contact-titles">
+        <div class="contact-content-box-wrapper contact-grid">
+          <div class="contact-titles contact-item">
             <div class="contact-text-header">
               <p>Are you ready?</p>
             </div>
@@ -204,7 +204,7 @@
               <p>create an account, or contact us.</p>
             </div>
           </div>
-          <div class="contact-buttons">
+          <div class="contact-buttons contact-item">
             <a class="btn btn-md btn-general btn-purple" href="#create" role="button"> Create Your Account </a>
             <a class="btn btn-md btn-general btn-white" href="#contact" role="button"> Contact Us</a>
           </div>
