--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
   <!-- style CSS -->
   <link rel="stylesheet" href="css/stylesheets/style.css">
-  <link rel="stylesheet" href="css/stylesheets/responsive.css">
 </head>
 
 <body>
@@ -52,10 +51,10 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-logo" href="#home">
-              <img src="img/ice-cream-logo.png" alt="logo" height="50" />
+              <img src="img/ice-cream-logo.png" alt="logo" height="40" />
             </a>
           </div>
-          <div class="mywebnow-menu" class="collapse navbar-collapse">
+          <div div="mywebnow-menu" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li><a href="#home"> Home </a></li>
               <li><a href="#about"> Why Us </a></li>
