--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
               </li>
             </ul>
           </div>
-          <div class="footer-company col-md-2 hidden-sm hidden-xs">
-            <ul class="footer-company-items">
+          <div class="footer-company footer-column col-md-2 hidden-sm hidden-xs">
+            <ul class="footer-company-items footer-list-items">
               <li><strong>Company</strong></li>
               <li>About Us</li>
               <li>News</li>
@@ -240,8 +240,8 @@
               <li>Contact Us</li>
             </ul>
           </div>
-          <div class="footer-services col-md-2 hidden-sm hidden-xs">
-            <ul class="footer-services-items">
+          <div class="footer-services footer-column col-md-2 hidden-sm hidden-xs">
+            <ul class="footer-services-items footer-list-items">
               <li><strong>Services</strong></li>
               <li>Web Hosting</li>
               <li>Cloud Hosting</li>
@@ -249,8 +249,8 @@
               <li>Domain Names</li>
             </ul>
           </div>
-          <div class="footer-others col-md-2 hidden-sm hidden-xs">
-            <ul class="footer-others-items">
+          <div class="footer-others footer-column col-md-2 hidden-sm hidden-xs">
+            <ul class="footer-others-items footer-list-items">
               <li><strong>Others</strong></li>
               <li>Transfer domains</li>
               <li>Customer Portal</li>
@@ -259,7 +259,7 @@
             </ul>
           </div>
           <div class="footer-social-icons col-md-2">
-            <ul class="social-list">
+            <ul class="social-list ">
               <li><a href="#" class="social-icon icon-white"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#" class="social-icon icon-white"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#" class="social-icon icon-white"><i class="fa fa-google-plus"></i></a></li>
