--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <input type="text" name="domain-input" placeholder="Write your domain" class="search-form-input" />
               </div>
               <div class="form-group" id="send-btn">
-                <a class="btn btn-lg btn-mint search-form-submit-btn" href="#" role="button">Search</a>
+                <a class="btn btn-lg btn-mint btn-general search-form-submit-btn" href="#" role="button">Search</a>
               </div>
             </form>
           </div>
