--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
               </li>
               <li>
                 <a href="#" class="social-icon icon-white"><i class="fa fa-envelope"></i></a>
-                 <a href="#">Email</a>
+                <a href="#">Email</a>
               </li>
               <li>
                 <a href="#" class="social-icon icon-white"><i class="fa fa-map-marker"></i></a>
-                 <a href="#">Address</a>
+                <a href="#">Address</a>
               </li>
             </ul>
           </div>
@@ -258,8 +258,8 @@
               <li><a href="#">Video Tutorials</a></li>
             </ul>
           </div>
-          <div class="footer-social-icons col-md-2">
-            <ul class="social-list ">
+          <div class="footer-social-icons footer-column col-md-2">
+            <ul class="social-list footer-list-items">
               <li><a href="#" class="social-icon icon-white"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#" class="social-icon icon-white"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#" class="social-icon icon-white"><i class="fa fa-google-plus"></i></a></li>
@@ -268,7 +268,6 @@
         </div>
       </div>
     </footer>
-
   </div>
 
   <!-- jQuery -->
