footer link redirects

--- a/index.html
+++ b/index.html
@@ -237,16 +237,16 @@
               <li><a href="#">About Us</a></li>
               <li><a href="#">News</a></li>
               <li><a href="#">FAQ</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="#contact">Contact Us</a></li>
             </ul>
           </div>
           <div class="footer-services footer-column col-md-2 hidden-sm hidden-xs">
             <ul class="footer-services-items footer-list-items">
               <li><strong>Services</strong></li>
-              <li><a href="#">Web Hosting</a></li>
-              <li><a href="#">Cloud Hosting</a></li>
-              <li><a href="#">VPS Services</a></li>
-              <li><a href="#">Domain Names</a></li>
+              <li><a href="#services">Web Hosting</a></li>
+              <li><a href="#services">Cloud Hosting</a></li>
+              <li><a href="#services">VPS Services</a></li>
+              <li><a href="#services">Domain Names</a></li>
             </ul>
           </div>
           <div class="footer-others footer-column col-md-2 hidden-sm hidden-xs">
