button hover color dark purple

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-logo" href="#home">
-              <img src="img/ice-cream-logo.png" alt="logo" height="40" />
+              <img src="img/ice-cream-logo.png" class="animated logo-img" alt="logo" height="40" />
             </a>
           </div>
           <div div="mywebnow-menu" class="collapse navbar-collapse">
