--- a/index.html
+++ b/index.html
@@ -219,15 +219,15 @@
             <ul class="footer-contact-items footer-list-items">
               <li>
                 <a href="#" class="social-icon icon-white"><i class="fa fa-phone"></i></a>
-                <strong><a href="#">Phone</a></strong>
+                <strong><a href="#">999.999.9999</a></strong>
               </li>
               <li>
                 <a href="#" class="social-icon icon-white"><i class="fa fa-envelope"></i></a>
-                <a href="#">Email</a>
+                <a href="#">email@email.com</a>
               </li>
               <li>
                 <a href="#" class="social-icon icon-white"><i class="fa fa-map-marker"></i></a>
-                <a href="#">Address</a>
+                <a href="#">99 address ln.</a>
               </li>
             </ul>
           </div>
